--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
     <body>
+            <head>
+        <title>...</title>
+        <link rel="stylesheet" href="style.css"/>
+            </head>
         <header>
             <img src=" https://lms.algoritmika.org/uploads/2020/11/logo_0_1606475988.png"/>
             <a class="sp_button" href="#news">Новости</a>
